update Responsive Design

--- a/index.html
+++ b/index.html
@@ -44,8 +44,14 @@
           <span class="student-role">{{students[currentIndex].role}}</span>
         </section>
       </section>
-      <section class="bottom">
-        <img src="./images/pattern-curve.svg" alt="" srcset="" />
+      <section>
+        <img
+          class="footer"
+          style="position: fixed; bottom: 0px;"
+          src="./images/pattern-curve.svg"
+          alt=""
+          srcset=""
+        />
       </section>
 
       <div class="attribution bottom">
