Update class name

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </head>
   <body>
     <main id="app" class="testimonial">
-      <div class="testimonial-image-div">
+      <div class="testimonial-image-section">
         <span class="img-bg"><img src="./images/pattern-bg.svg" /></span>
         <img class="testimonial-image" :src="students[currentIndex].imageUrl" />
         <span class="testimonial-nav-buttons">
